Remove ConnectCost.java and move calcurate cost function to Tokenizer.java to migrate recent Mecab. Fixed not close connect cost file. Change postfix .cha to .sen for dictionary. Other minor change.
git-svn-id: https://svn.java.net/svn/sen~svn/trunk@17 8270e81b-89ab-cf54-a406-ee0910b9af0c

--- a/sen/dic/build.xml
+++ b/sen/dic/build.xml
@@ -35,10 +35,10 @@
   <target name="prepare-dics">
     <condition property="dics.present">
       <and>
-        <available file="da.cha"/>
-        <available file="matrix.cha"/>
-        <available file="morphemeInfo.cha"/>
-        <available file="token.cha"/>
+        <available file="da.sen"/>
+        <available file="matrix.sen"/>
+        <available file="morphemeInfo.sen"/>
+        <available file="token.sen"/>
       </and>
     </condition>
   </target>
@@ -46,8 +46,8 @@
   <target name="prepare-dics0">
     <condition property="dics0.present">
       <and>
-        <available file="dic.cha"/>
-        <available file="connect.cha"/>
+        <available file="dic.sen"/>
+        <available file="connect.sen"/>
       </and>
     </condition>
   </target>
@@ -71,7 +71,7 @@
 
   <target name="clean">
     <delete>
-      <fileset dir="." includes="*.cha"/>
+      <fileset dir="." includes="*.sen"/>
     </delete>
     <delete dir="ipadic-${ipadic.version}"/>
     <delete file="${ipadic.archive}" />
