--- a/sen/dic/dictionary.properties
+++ b/sen/dic/dictionary.properties
@@ -1,18 +1,18 @@
 //file 
 
-text_connection_file=connect.cha
-matrix_file=matrix.cha
-pos_file=posInfo.cha
-text_dic_file=dic.cha
-token_file=token.cha
-double_array_file=da.cha
+text_connection_file=connect.sen
+matrix_file=matrix.sen
+pos_file=posInfo.sen
+text_dic_file=dic.sen
+token_file=token.sen
+double_array_file=da.sen
 
 default_connection_cost=10000
 
 // pos_start: beginning field for pos information.
 // pos_size:  number of fields for pos information. 
 //
-// for excample chasentng's default text dictionary "dic.cha"
+// for excample chasentng's default text dictionary "dic.sen"
 // have following line:
 //
 //                         pos_size(7)       
