--- a/sen/dic/dictionary.properties
+++ b/sen/dic/dictionary.properties
@@ -1,9 +1,9 @@
 //file 
 
-text_connection_file=connect.sen
+text_connection_file=connect.csv
+text_dic_file=dic.csv
 matrix_file=matrix.sen
 pos_file=posInfo.sen
-text_dic_file=dic.sen
 token_file=token.sen
 double_array_file=da.sen
 
@@ -19,6 +19,7 @@ default_connection_cost=10000
 //                  |-----------------------|
 //               pos_start(2)               |
 //                  |                       |
+
 //        0,   1,   2,   3,   4,5,6,7,     8,     9,    10
 //   -----------------------------------------------------
 //   あたり,2809,名詞,接尾,一般,*,*,*,あたり,アタリ,アタリ
