--- a/sen/dic/build.xml
+++ b/sen/dic/build.xml
@@ -90,7 +90,7 @@
   </target>
 
   <target name="create" depends="dics0" unless="dics.present">
-    <java classname="net.java.sen.tools.MkChaDic"
+    <java classname="net.java.sen.tools.MkSenDic"
           fork="true"
           maxmemory="140m">
       <classpath>
@@ -101,6 +101,13 @@
         <pathelement location="../build"/>
         <pathelement path="${java.class.path}"/>
       </classpath>
+       <!-- Comment out if you would like to add your custom dictionary.
+            Custom dictionary format have to compatibule with 'dic.csv'.
+            This parameter is a file path for custom dictionary. 
+            You can add multiple dictionary here like "custom_dic1.csv custom_dic2.csv.."
+            If you add huge dictionary, you have to modify maxmemory attribute in java task.
+       -->
+      <arg line="customize_dic.csv" />
     </java>
   </target>
 
