append pre processor and post processor.
git-svn-id: https://svn.java.net/svn/sen~svn/trunk@38 8270e81b-89ab-cf54-a406-ee0910b9af0c

--- a/sen/dic/dictionary.properties
+++ b/sen/dic/dictionary.properties
@@ -6,6 +6,8 @@ matrix_file=matrix.sen
 pos_file=posInfo.sen
 token_file=token.sen
 double_array_file=da.sen
+compound_word_file=compound.csv
+compound_word_table=compound.sen
 
 default_connection_cost=10000
 
