--- a/sen/build.xml
+++ b/sen/build.xml
@@ -12,9 +12,11 @@
 
   <!-- begin initial environment -->
   <property name="name" value="sen"/>
-  <property name="version" value="1.0"/>
+  <property name="version" value="1.1-dev"/>
+
   <property name="sen.jar" value="sen.jar"/>
   <property name="src.dir" location="src/java"/>
+  <property name="test.dir" location="src/test"/>
   <property name="docs.dir" location="docs"/>
   <property name="lib.dir" location="lib"/>
   <property name="build.javadocs" location="${docs.dir}/api"/>
@@ -64,6 +66,7 @@
              use="true"
              windowtitle="${Name} API"
              doctitle="${Name}"
+             source="1.3"
     >
       <fileset dir="${src.dir}">
           <include name="**/*.java"/>
@@ -106,6 +109,29 @@
       description="clean up">
     <delete dir="${build.dest}"/>
     <delete dir="${dist.dir}"/>
+  </target>
+
+  <target name="test" depends="jar"
+      description="test">
+  	
+    <javac srcdir="${test.dir}" destdir="${build.classes}" debug="true"
+      deprecation="${deprecation}" encoding="euc_jp"
+      classpathref="classpath">
+    </javac>
+  	
+  	<junit fork="yes">
+      <jvmarg value="-Dsen.home=. -Xmx140m"/>
+      <classpath>
+        <pathelement path="classpath"/>
+        <pathelement location="build/classes"/>
+      </classpath>
+      <batchtest fork="no" todir=".">
+        <fileset dir="${test.dir}">
+          <include name="**/*Test.java" />
+        </fileset>
+      </batchtest>
+  		<formatter type="plain" />
+    </junit>
   </target>
 
 </project>
