--- a/sen/dic/dictionary.properties
+++ b/sen/dic/dictionary.properties
@@ -14,7 +14,7 @@ default_connection_cost=10000
 // pos_start: beginning field for pos information.
 // pos_size:  number of fields for pos information. 
 //
-// for excample chasentng's default text dictionary "dic.sen"
+// for excample chasentng's default text dictionary "dic.csv"
 // have following line:
 //
 //                         pos_size(7)       
