--- a/sen/build.xml
+++ b/sen/build.xml
@@ -12,7 +12,7 @@
 
   <!-- begin initial environment -->
   <property name="name" value="sen"/>
-  <property name="version" value="1.1-dev"/>
+  <property name="version" value="1.1rc1"/>
 
   <property name="sen.jar" value="sen.jar"/>
   <property name="src.dir" location="src/java"/>
