Add logging configuration for the create target.
git-svn-id: https://svn.java.net/svn/sen~svn/trunk@58 8270e81b-89ab-cf54-a406-ee0910b9af0c

--- a/sen/dic/build.xml
+++ b/sen/dic/build.xml
@@ -102,6 +102,7 @@
         <pathelement location="../build"/>
         <pathelement path="${java.class.path}"/>
       </classpath>
+      <jvmarg line="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog -Dorg.apache.commons.logging.simplelog.log.net.java=info"/>
        <!-- Comment out if you would like to add your custom dictionary.
             Custom dictionary format have to compatibule with 'dic.csv'.
             This parameter is a file path for custom dictionary. 
