Copy sen.jar into lib/sen.jar when build sen.jar. Add log configuration for test dictionary.
git-svn-id: https://svn.java.net/svn/sen~svn/trunk@59 8270e81b-89ab-cf54-a406-ee0910b9af0c

--- a/sen/build.xml
+++ b/sen/build.xml
@@ -82,6 +82,7 @@
     <jar jarfile="${build.lib}/${sen.jar}" basedir="${build.classes}" >
       <include name="*/**" />
     </jar>
+    <copy file="${build.lib}/${sen.jar}" todir="${lib.dir}" />
   </target>
 
 
