--- a/sen/build.xml
+++ b/sen/build.xml
@@ -12,7 +12,7 @@
 
   <!-- begin initial environment -->
   <property name="name" value="sen"/>
-  <property name="version" value="1.2.1"/>
+  <property name="version" value="1.2.2"/>
 
   <property name="sen.jar" value="sen.jar"/>
   <property name="src.dir" location="src/java"/>
@@ -28,7 +28,7 @@
 
   <path id="classpath">
       <fileset dir="${lib.dir}">
-          <include name="**/*.jar"/>
+          <include name="*.jar"/>
       </fileset>
   </path>
 
@@ -70,6 +70,7 @@
              use="true"
              windowtitle="${Name} API"
              doctitle="${Name}"
+			 locale="en_US"
              source="1.3"
     >
       <fileset dir="${src.dir}">
